fix: fixes button svg on mobile menu; testing react-height-animate

--- a/components/Layout/MobileMenu/MobileMenu.module.scss
+++ b/components/Layout/MobileMenu/MobileMenu.module.scss
@@ -79,6 +79,7 @@
   border: none;
   width: 24px;
   height: 24px;
+  padding: 0;
   svg {
     width: 14px;
     height: 14px;
